[package]
name = "rust_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "*"
reqwest = { version = "*", features = ["json", "cookies"] }
scraper = "0.13.0"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
jsonpath_lib = "*"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
